refactored how activities get activeUser, fixed lists, renamed files A user object is no longer passed though intents. Activities and Fragments get the active user object from ApplicationManager, which holds a static, synchronous activeUser object. In addition, every Activity and Fragment that needs to access the active user now extends UserActivityBase or TabFragmentBase. These hold an activeUser object that is automatically updated upon creating and resuming the Activity or Fragment. Thanks to this new implementation, after a couple tweaks, every Activity and Fragment displays accurate, current information, and creating and deleting lists works perfectly. IT WORKS!!!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     -->
 
     <application
-        android:name=".ApplicationContextProvider"
+        android:name=".ApplicationManager"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,8 +18,8 @@
         <activity android:name=".activity.BookInfoActivity"></activity>
         <activity android:name=".activity.CreateAccActivity" />
         <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.BookListActivity" />
-        <activity android:name=".activity.UserListsActivity" />
+        <activity android:name=".activity.ListActivityBookList" />
+        <activity android:name=".activity.ListActivityUserLists" />
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
